--- a/prepros.cfg
+++ b/prepros.cfg
@@ -404,68 +404,20 @@
           "parents": [],
           "type": "javascript"
         },
-        "93644e47": {
-          "id": "93644e47",
-          "path": "css/imports/_fonts.css",
-          "output": "css/imports/_fonts-dist.css",
-          "name": "_fonts.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "ed020e7a": {
-          "id": "ed020e7a",
-          "path": "css/components/header/_cart-nav.css",
-          "output": "css/components/header/_cart-nav-dist.css",
-          "name": "_cart-nav.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "dc115875": {
-          "id": "dc115875",
-          "path": "css/components/woocommerce/_product-archive.css",
-          "output": "css/components/woocommerce/_product-archive-dist.css",
-          "name": "_product-archive.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "7e70da7e": {
           "id": "7e70da7e",
           "path": "scss/style.scss",
-          "output": "css/style.css",
+          "output": "style.css",
           "name": "style.scss",
           "category": "CSS",
           "autoCompile": true,
-          "autoprefixer": false,
+          "autoprefixer": true,
           "sourceMaps": false,
           "libSass": true,
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "sass"
@@ -2694,22 +2646,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "0c7b55b5": {
-          "id": "0c7b55b5",
-          "path": "css/style.css",
-          "output": "css/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         }
       },
       "deploymentHistory": {},
