added jquery ui spinner for number input boxes

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2646,6 +2646,74 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "504bd965": {
+          "id": "504bd965",
+          "path": "js/lib/jquery-ui.min.js",
+          "output": "js/lib/jquery-ui.min-dist.js",
+          "name": "jquery-ui.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6de58a96"
+          ],
+          "type": "javascript"
+        },
+        "19eb6560": {
+          "id": "19eb6560",
+          "path": "scss/imports/jquery-ui.min.css",
+          "output": "scss/imports/jquery-ui.min-dist.css",
+          "name": "jquery-ui.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "6de58a96": {
+          "id": "6de58a96",
+          "path": "js/scripts.dev.js",
+          "output": "js/scripts.js",
+          "name": "scripts.dev.js",
+          "category": "JS",
+          "autoCompile": true,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e2341f70": {
+          "id": "e2341f70",
+          "path": "js/lib/jquery-3.2.1.min.js",
+          "output": "js/lib/jquery-3.2.1.min-dist.js",
+          "name": "jquery-3.2.1.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6de58a96"
+          ],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
@@ -2842,7 +2910,14 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null
+              "preamble": null,
+              "indent_start": 0,
+              "indent_level": 4,
+              "width": 80,
+              "max_line_len": 32000,
+              "source_map": null,
+              "shebang": true,
+              "quote_style": 0
             }
           }
         }
