added jquery ui css

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2665,22 +2665,6 @@
           ],
           "type": "javascript"
         },
-        "19eb6560": {
-          "id": "19eb6560",
-          "path": "scss/imports/jquery-ui.min.css",
-          "output": "scss/imports/jquery-ui.min-dist.css",
-          "name": "jquery-ui.min.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "6de58a96": {
           "id": "6de58a96",
           "path": "js/scripts.dev.js",
@@ -2714,6 +2698,26 @@
             "6de58a96"
           ],
           "type": "javascript"
+        },
+        "e35c1bc6": {
+          "id": "e35c1bc6",
+          "path": "scss/imports/_jquery-ui.scss",
+          "output": "css/imports/_jquery-ui.css",
+          "name": "_jquery-ui.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
