fixed assortment container buttons being weirdly offset in Safari

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2718,110 +2718,6 @@
             "7e70da7e"
           ],
           "type": "sass"
-        },
-        "f85d1f82": {
-          "id": "f85d1f82",
-          "path": "scss/components/content/_about-page.scss",
-          "output": "css/components/content/_about-page.css",
-          "name": "_about-page.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "7e70da7e"
-          ],
-          "type": "sass"
-        },
-        "c262f2ae": {
-          "id": "c262f2ae",
-          "path": "scss/components/woocommerce/_button.scss",
-          "output": "css/components/woocommerce/_button.css",
-          "name": "_button.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "7e70da7e"
-          ],
-          "type": "sass"
-        },
-        "954a0dbd": {
-          "id": "954a0dbd",
-          "path": "scss/components/woocommerce/_woocommerce-order-received.scss",
-          "output": "css/components/woocommerce/_woocommerce-order-received.css",
-          "name": "_woocommerce-order-received.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "7e70da7e"
-          ],
-          "type": "sass"
-        },
-        "a0cb6d63": {
-          "id": "a0cb6d63",
-          "path": "scss/components/wordpress/_search.scss",
-          "output": "css/components/wordpress/_search.css",
-          "name": "_search.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "7e70da7e"
-          ],
-          "type": "sass"
-        },
-        "b00117ec": {
-          "id": "b00117ec",
-          "path": "woocommerce/old.content-product.php",
-          "output": "woocommerce/old.content-product.php",
-          "name": "old.content-product.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "20d85056": {
-          "id": "20d85056",
-          "path": "img/blur-bg.jpg",
-          "output": "img/blur-bg.jpg",
-          "name": "blur-bg.jpg",
-          "category": "IMAGE",
-          "size": 467933,
-          "type": "jpg",
-          "initialSize": 467933,
-          "optimized": false,
-          "height": 0,
-          "width": 0
         }
       },
       "deploymentHistory": {},
@@ -3018,14 +2914,7 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null,
-              "indent_start": 0,
-              "indent_level": 4,
-              "width": 80,
-              "max_line_len": 32000,
-              "source_map": null,
-              "shebang": true,
-              "quote_style": 0
+              "preamble": null
             }
           }
         }
